--- a/ejemplos/ejemplo1.html
+++ b/ejemplos/ejemplo1.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/artiframe.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../css/artiFrame.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Cabecera</h1>
+    </header>
+    <main>
+        <section>1</section>
+        <section>2</section>
+    </main>
+    <footer>Pie de pagina</footer>
+  </body>
 </html>
