Definicion de las clases con logo y sin logo para las cabeceras que tiene el logo. Limpieza del codigo css.

--- a/componentes/cabeceras/cabecera2.html
+++ b/componentes/cabeceras/cabecera2.html
@@ -1,6 +1,15 @@
-<header>
-  <div>
-    <img src="../img/logo.jpg" alt="Logo" />
-    <h1>Cabecera</h1>
-  </div>
+<header class="conLogo conLogo--centrado">
+  <img src="../img/logo.jpg" alt="Logo" />
+  <h1>Cabecera</h1>
+</header>
+
+<header class="conLogo conLogo--izquierda">
+  <img src="../img/logo.jpg" alt="Logo" />
+  <h1>Cabecera</h1>
+</header>
+
+
+<header class="conLogo conLogo--derecha">
+  <img src="../img/logo.jpg" alt="Logo" />
+  <h1>Cabecera</h1>
 </header>
