--- a/ejemplos/ejemplo1.html
+++ b/ejemplos/ejemplo1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/artiFrame.css" />
   </head>
   <body>
-    <header>
+    <header class="sinLogo">
       <h1>Cabecera</h1>
     </header>
     <main>
