--- a/ejemplos/ejemplo2.html
+++ b/ejemplos/ejemplo2.html
@@ -7,26 +7,23 @@
     <link rel="stylesheet" href="../css/artiFrame.css" />
   </head>
   <body>
-    <header>
-        <div>
-          <img src="../img/logo.jpg" alt="Logo" />
-          <h1>Cabecera</h1>
-        </div>
-      </header>
-      
+    <header class="conLogo conLogo--derecha">
+      <img src="../img/logo.jpg" alt="Logo" />
+      <h1>Cabecera</h1>
+    </header>
     <main>
-        <section>1</section>
-        <section>2</section>
+      <section>1</section>
+      <section>2</section>
     </main>
     <footer>
-        <div>
-            <p>Pie de pagina</p>
-        </div>
-        <div>
-            <span><a href="">Facebook</a></span>
-            <span><a href="">Instagram</a></span>
-            <span><a href="">Twitter</a></span>
-        </div>
+      <div>
+        <p>Pie de pagina</p>
+      </div>
+      <div>
+        <span><a href="">Facebook</a></span>
+        <span><a href="">Instagram</a></span>
+        <span><a href="">Twitter</a></span>
+      </div>
     </footer>
   </body>
 </html>
