--- a/ejemplos/ejemplo2.html
+++ b/ejemplos/ejemplo2.html
@@ -6,24 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/artiFrame.css" />
   </head>
-  <body>
+  <body class="simple simple--navHorizontal">
     <header class="conLogo conLogo--derecha">
       <img src="../img/logo.jpg" alt="Logo" />
       <h1>Cabecera</h1>
     </header>
+    <nav class="navHorizontal--izquierda">
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+    </nav>
     <main>
       <section>1</section>
       <section>2</section>
     </main>
-    <footer>
-      <div>
-        <p>Pie de pagina</p>
-      </div>
-      <div>
-        <span><a href="">Facebook</a></span>
-        <span><a href="">Instagram</a></span>
-        <span><a href="">Twitter</a></span>
-      </div>
-    </footer>
+    <footer></footer>
   </body>
+  
 </html>
