--- a/ejemplos/ejemplo2.html
+++ b/ejemplos/ejemplo2.html
@@ -14,7 +14,14 @@
     <nav class="navHorizontal--izquierda">
       <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>Item 2</li>
+        <li>
+          SubMenu
+          <ul>
+            <li><a href="">Enlace</a></li>
+            <li>1</li>
+            <li>1</li>
+          </ul>
+        </li>
         <li>Item 3</li>
       </ul>
     </nav>
