commit prueba commit

--- a/ejemplos/ejemplo5.html
+++ b/ejemplos/ejemplo5.html
@@ -32,7 +32,13 @@
         <button class="bottonSombreado">Ejemplo botton 3</button>
         <button class="bottonPocoRedondeado">Ejemplo 4</button>
       </section>
-      <section>2</section>
+      <section>
+        <article>
+            <header class="">Titulo Articulo</header>
+            <p class="">Contenido del articulo</p>
+            <img src="../img/img.png" alt="">
+        </article>        
+      </section>
     </main>
     <aside>3</aside>
     <footer>
