Limpieza de comentarios en cabecera

--- a/ejemplos/ejemplo5.html
+++ b/ejemplos/ejemplo5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/artiFrame.css" />
+    <link rel="stylesheet" href="../css/artiframe.css" />
   </head>
   <body class="simple simple--navHorizontal simple__main--filas simple__aside simple__aside--derecha">
     <header class="conLogo conLogo--derecha">
