--- a/ejemplos/ejemplo6.html
+++ b/ejemplos/ejemplo6.html
@@ -11,7 +11,7 @@
       <img src="../img/logo.jpg" alt="Logo" />
       <h1>Cabecera</h1>
     </header>
-    <nav class="despligueFlotado">
+    <nav>
       <ul>
        <li><a href="">Enlace</a></li>
         <li>
