--- a/ejemplos/ejemplo5.html
+++ b/ejemplos/ejemplo5.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/artiframe.css" />
   </head>
-  <body class="simple simple--navVertical simple__main--filas">
+  <body class="simple simple--navVertical --navVertical--derecha simple__main--filas">
     <header class="conLogo conLogo--derecha">
       <img src="../img/logo.jpg" alt="Logo" />
       <h1>Cabecera</h1>
