Menu mejorado, colores con plantilla, efecto, tipos de menu, flotadoSubmenu, bloque, circunflejo de letra

--- a/ejemplos/ejemplo7.html
+++ b/ejemplos/ejemplo7.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/artiframe.css" />
   </head>
-  <body class="simple--navHorizontal simple__main--filas">
+  <body class="simple--navVertical simple__main--filas">
     <header class="conLogo conLogo--derecha">
       <img src="../img/logo.jpg" alt="Logo" />
       <h1>Cabecera</h1>
     </header>
-    <nav>
+    <nav class="despligueFlotado">
       <ul>
        <li><a href="">Enlace</a></li>
         <li>
