--- a/ejemplos/ejemplo2.html
+++ b/ejemplos/ejemplo2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/artiFrame.css" />
   </head>
-  <body class="simple simple--navHorizontal">
+  <body class="simple--navHorizontal">
     <header class="conLogo conLogo--derecha">
       <img src="../img/logo.jpg" alt="Logo" />
       <h1>Cabecera</h1>
