Limpiado de formularios

--- a/ejemplos/ejemploForms.html
+++ b/ejemplos/ejemploForms.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Simple</title>
-    <link rel="stylesheet" href="../css/artiFrame.css">
+    <link rel="stylesheet" href="../css/artiframe.css">
 </head>
 <body>
     <div class="form-container">
