Solucion de bugs en el grid

--- a/ejemplos/ejemplo8.html
+++ b/ejemplos/ejemplo8.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/artiframe.css" />
 </head>
 
-<body class="simple--navVertical simple__main--filas">
+<body class="simple simple--navVertical simple__main--filas">
     <header class="conLogo conLogo--derecha">
         <img src="../img/logo.jpg" alt="Logo" />
         <h1>Cabecera</h1>
