--- a/ejemplos/ejemplo5.html
+++ b/ejemplos/ejemplo5.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/artiFrame.css" />
-  </head>
-  <body class="simple simple--navHorizontal simple__main--filas simple__aside simple__aside--derecha">
+    <link rel="stylesheet" href="../css/artiframe.css" />
+</head>
+
+<body class="simple simple--navHorizontal simple__main--filas simple__aside simple__aside--derecha">
     <header class="conLogo conLogo--derecha">
-      <img src="../img/logo.jpg" alt="Logo" />
-      <h1>Cabecera</h1>
+        <img src="../img/logo.jpg" alt="Logo" />
+        <h1>Cabecera</h1>
     </header>
-    <nav class="navHorizontal--izquierda">
-      <ul>
-       <li class="hoverOscurecerHijos"><a href="">Enlace</a></li>
-        <li class="hoverOscurecer">
-          SubMenu
-          <ul>
-            <li class="hoverOscurecerHijos"><a href="">Enlace</a></li>
-            <li class="hoverOscurecer">1</li>
-            <li class="hoverOscurecer">1</li>
-          </ul>
-        </li>
-        <li class="hoverOscurecer">Item 3</li>
-      </ul> 
+    <nav class="despligueFlotado">
+        <ul>
+            <li><a href="">Enlace</a></li>
+            <li>
+                SubMenu
+                <ul>
+                    <li><a href="">Enlace</a></li>
+                    <li>1</li>
+                    <li>1</li>
+                </ul>
+            </li>
+            <li>Item 3</li>
+        </ul>
     </nav>
     <main>
       <section>
-        <button class="hoverBlanquedao">Ejemplo botton 1</button>
-        <button class="bottonRedondeado">Ejemplo botton 2</button>
-        <button class="bottonSombreado">Ejemplo botton 3</button>
-        <button class="bottonPocoRedondeado">Ejemplo 4</button>
-      </section>
-      <section>
-        <article>
-            <header class="">Titulo Articulo</header>
-            <p class="">Contenido del articulo</p>
-            <img src="../img/img.png" alt="">
-        </article>        
+        <div class="container">
+            <!-- Galería de imágenes -->
+            <section class="gallery">
+                <a href="#img1"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
+                <a href="#img2"><img src="../img/img1.jpg" alt="Imagen 2" /></a>
+                <a href="#img3"><img src="../img/img1.jpg" alt="Imagen 3" /></a>
+                <a href="#img4"><img src="../img/img1.jpg" alt="Imagen 4" /></a>
+                <a href="#img5"><img src="../img/img1.jpg" alt="Imagen 5" /></a>
+                <a href="#img6"><img src="../img/img1.jpg" alt="Imagen 6" /></a>
+            </section>
+          </div>
       </section>
     </main>
-    <aside>3</aside>
+
     <footer>
-      <div>
-          <p>Pie de pagina</p>
-      </div>
-      <div>
-          <span><a href="">Facebook</a></span>
-          <span><a href="">Instagram</a></span>
-          <span><a href="">Twitter</a></span>
-      </div>
-  </footer>
-  </body>
+        <div>
+            <p>Pie de pagina</p>
+        </div>
+        <div>
+            <span><a href="">Facebook</a></span>
+            <span><a href="">Instagram</a></span>
+            <span><a href="">Twitter</a></span>
+        </div>
+    </footer>
+</body>
+
 </html>
