--- a/ejemplos/ejemplo9.html
+++ b/ejemplos/ejemplo9.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../css/artiframe.css" />
 </head>
 
-<body class="simple--navVertical simple__main--filas">
+<body class="simple simple--navVertical simple__main--filas --navVertical--derecha">
     <header class="conLogo conLogo--derecha">
         <img src="../img/logo.jpg" alt="Logo" />
         <h1>Cabecera</h1>
     </header>
-    <nav>
+    <nav class="despligueFlotado">
         <ul>
             <li><a href="">Enlace</a></li>
             <li>
@@ -28,23 +28,18 @@
         </ul>
     </nav>
     <main>
+      <section>
         <div class="container">
             <!-- Galería de imágenes -->
             <section class="gallery">
-            <a href="#img1"><img src="./img/img1.jpg" alt="Imagen 1" /></a>
-            <a href="#img2"><img src="img1.jpg" alt="Imagen 2" /></a>
-            <a href="#img3"><img src="img1.jpg" alt="Imagen 3" /></a>
-            <a href="#img4"><img src="img1.jpg" alt="Imagen 4" /></a>
-            <a href="#img5"><img src="img1.jpg" alt="Imagen 5" /></a>
-            <a href="#img6"><img src="img1.jpg" alt="Imagen 6" /></a>
+                <a href="#img1"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
+                <a href="#img2"><img src="../img/img1.jpg" alt="Imagen 2" /></a>
+                <a href="#img3"><img src="../img/img1.jpg" alt="Imagen 3" /></a>
+                <a href="#img4"><img src="../img/img1.jpg" alt="Imagen 4" /></a>
+                <a href="#img5"><img src="../img/img1.jpg" alt="Imagen 5" /></a>
+                <a href="#img6"><img src="../img/img1.jpg" alt="Imagen 6" /></a>
             </section>
           </div>
-        <section>
-            <article>
-                <header class="">Titulo Articulo</header>
-                <p class="">Contenido del articulo</p>
-                <img src="../img/img.png" alt="" />
-            </article>
         </section>
     </main>
 
