galeria funcionando con imagenes repetidas

--- a/ejemplos/ejemplo5.html
+++ b/ejemplos/ejemplo5.html
@@ -28,18 +28,47 @@
         </ul>
     </nav>
     <main>
-      <section>
-        <div class="container">
-            <!-- Galería de imágenes -->
-            <section class="gallery">
-                <a href="#img1"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
-                <a href="#img2"><img src="../img/img1.jpg" alt="Imagen 2" /></a>
-                <a href="#img3"><img src="../img/img1.jpg" alt="Imagen 3" /></a>
-                <a href="#img4"><img src="../img/img1.jpg" alt="Imagen 4" /></a>
-                <a href="#img5"><img src="../img/img1.jpg" alt="Imagen 5" /></a>
-                <a href="#img6"><img src="../img/img1.jpg" alt="Imagen 6" /></a>
-            </section>
-          </div>
+    <section>
+        <div class="container"></div>
+            <div class="gallery">
+                <div>
+                    <a href="#modal"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
+                    <a href="#modal2"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
+                    <a href="#modal"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
+            </div>
+        </div>
+    
+        <div class="carrusel" style="--numeroImagenes: 5">
+            <div class="carousel-images">
+                <img src="../img/img1.jpg" alt="Imagen 1" />
+                <img src="../img/img1.jpg" alt="Imagen 1" />
+                <img src="../img/img1.jpg" alt="Imagen 1" />
+            </div>
+        </div>
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <label for="modal-trigger" class="close">&times;</label>
+                <h2>Resumen chuches</h2>
+                <p>Caracteristicas.</p>
+                <a href="#close">Cerrar</a>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <label for="modal-trigger" class="close">&times;</label>
+                <h2>Resumen chuches2</h2>
+                <p>Caracteristicas2.</p>
+                <a href="#close">Cerrar</a>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <label for="modal-trigger" class="close">&times;</label>
+                <h2>Resumen chuches2</h2>
+                <p>Caracteristicas2.</p>
+                <a href="#close">Cerrar</a>
+            </div>
+        </div>
       </section>
     </main>
 
