--- a/ejemplos/ejemploModal.html
+++ b/ejemplos/ejemploModal.html
@@ -10,9 +10,11 @@
 <body>
     <a href="#modal">Abrir modal</a>
     <div id="modal" class="modal">
-        <h2>Titulo</h2>
-        <p>Esto es un modal muy simple</p>
-        <a href="#close">Cerrar</a>
+        <div>
+            <h2>Titulo</h2>
+            <p>Esto es un modal muy simple</p>
+            <a href="#close" class="cerrar">X</a>
+        </div>
     </div>
 </body>
 </html>
