--- a/ejemplos/ejemplo9.html
+++ b/ejemplos/ejemplo9.html
@@ -28,19 +28,44 @@
         </ul>
     </nav>
     <main>
-      <section>
+    <section>
         <div class="container">
             <!-- Galería de imágenes -->
-            <section class="gallery">
+            <section class="gallery animada">
                 <a href="#img1"><img src="../img/img1.jpg" alt="Imagen 1" /></a>
                 <a href="#img2"><img src="../img/img1.jpg" alt="Imagen 2" /></a>
                 <a href="#img3"><img src="../img/img1.jpg" alt="Imagen 3" /></a>
                 <a href="#img4"><img src="../img/img1.jpg" alt="Imagen 4" /></a>
                 <a href="#img5"><img src="../img/img1.jpg" alt="Imagen 5" /></a>
                 <a href="#img6"><img src="../img/img1.jpg" alt="Imagen 6" /></a>
+                <!-- Superposiciones para imágenes ampliadas -->
+                <div id="img1" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 1 Ampliada" />
+                </div>
+                <div id="img2" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 2 Ampliada" />
+                </div>
+                <div id="img3" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 3 Ampliada" />
+                </div>
+                <div id="img4" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 4 Ampliada" />
+                </div>
+                <div id="img5" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 5 Ampliada" />
+                </div>
+                <div id="img6" class="overlay">
+                    <a href="#" class="close-btn">X</a>
+                    <img src="../img/img1.jpg" alt="Imagen 6 Ampliada" />
+                </div>
             </section>
-          </div>
-        </section>
+        </div>
+    </section>
     </main>
 
     <footer>
