--- a/ejemplos/ejemploForms.html
+++ b/ejemplos/ejemploForms.html
@@ -18,16 +18,18 @@
             <label for="password">Contraseña</label>
             <input type="password" id="password" name="password" placeholder="Contraseña">
 
-            <label for="age1"></label>0 - 30
+            <label for="age1">0 - 30
                 <input type="radio" id="age1" name="age" value="30">
+            </label>
             </label>
             <label for="age2">31 - 60
                 <input type="radio" id="age2" name="age" value="60">
             </label>
+            <label for="vehicle1"> Soy mayor de edad</label>
             <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-            <label for="vehicle1"> Soy mayor de edad</label><br>
+            
 
-            <input type="text" placeholder="maricon">
+            <input type="text" placeholder="Escribe aqui">
             
             <button type="submit">Registrarse</button>
         </form>
