Cambio en el carrusel, añadido de clases para el control de la animacion y variables para controlar el tiempo

--- a/ejemplos/ejemplo8.html
+++ b/ejemplos/ejemplo8.html
@@ -15,7 +15,14 @@
     </header>
     <nav>
         <ul>
-            <li><a href="">Enlace</a></li>
+            <li>
+                Enlace
+                <ul>
+                    <li>Opcion 1</li>
+                    <li>Opcion 1</li>
+                    <li>Opcion 1</li>
+                </ul>
+            </li>
             <li>
                 SubMenu
                 <ul>
@@ -30,11 +37,23 @@
     <main>
         <section>
 
-            <div class="carrusel"  style="--numeroImagenes: 5;">
+            <div class="carrusel lateral"  style="--numeroImagenes: 10; --tiempo:10s;">
                 <div>
                     <img src="../img/img.png" alt="" />
                     <img src="../img/logo.jpg" alt="" />
                     <img src="../img/img.png" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/img.png" alt="" />
+                    <img src="../img/img.png" alt="" />
+                    <img src="../img/img.png" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" /><img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
                     <img src="../img/logo.jpg" alt="" />
                     <img src="../img/img.png" alt="" />
                 </div>
